# qcaudron.github.io

./: .buildinfo  .gitignore  CNAME  Makefile  README.md  _config.yml  about.md  genindex.html  index.html  index.md  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  publications.md  pyproject.toml  resume.md  rox.html  search.html  searchindex.js
.github/workflows/: deploy.yml
_data/: social-media.yml  timeline.yml
_sources/: index.md  markdown-notebooks.ipynb
_sources/about/: hobbies.md  index.md  photography.md  radio.md
_sources/publications/: index.md  talks.md
about/: gardening.html  hobbies.html  index.html  photography.html  publications.html  radio.html
assets/css/: style.scss
community/: index.html
publications/: index.html  talks.html
site/: _config.yml  _toc.yml  index.md
site/about/: gardening.md  hobbies.md  index.md  photography.md
site/community/: index.md
site/publications/: index.md
